--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import "../styles/global.css";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from '../layouts/BaseLayout.astro';
+import es from '../i18n/es';
+import Hero from '../components/Hero.astro';
+
+const lang = 'es';
+const isDark = true; // luego esto se puede cambiar con un botón o preferencia
+const t = es;
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout lang={lang} isDark={isDark}>
+  <Hero t={t} />
+</BaseLayout>
