--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,31 @@
 ---
-// src/components/Hero.astro
 import perfil from '../assets/avatar/avatar.webp';
 const { t } = Astro.props;
+import GitHub from '../assets/iconos/GitHub.svg';
+import Linkedin from '../assets/iconos/Linkedin.svg';
 ---
 
-<section class="flex flex-col items-center text-center py-16 px-4">
-  <img src={perfil.src} alt="Foto de perfil" class="w-32 h-32 rounded-full shadow-md mb-4" />
-  <h1 class="text-3xl font-bold">{t.hero.title}</h1>
-  <p class="text-lg mt-2 max-w-md text-gray-600 dark:text-gray-300">{t.hero.description}</p>
-  <p class="mt-4 text-blue-600 dark:text-blue-400">{t.hero.contact}</p>
+<section
+  id="hero"
+  class="flex flex-col md:flex-row items-center justify-center py-16 px-6 lg:px-20 max-w-screen-xl mx-auto opacity-0 gap-10 lg:gap-20"
+>
+   <div id="hero-image" class="">
+    <img
+      src={perfil.src}
+      alt="Foto de perfil"
+      class="w-48 h-48 lg:w-64 lg:h-64 rounded-full shadow-lg transition-transform duration-500 hover:scale-105"
+    />
+  </div>
+  <div id="hero-text" class="flex-1 text-center md:text-left">
+    <h1 class="text-4xl lg:text-6xl font-extrabold mb-6 leading-tight">{t.hero.title}</h1>
+    <p class="text-lg lg:text-xl mb-4 text-gray-600 dark:text-gray-300">{t.hero.description}</p>
+    <div class="flex justify-center filter dark:invert">
+        <img src={GitHub.src} alt="GitHub Icon" class="inline-block w-12 h-12 mr-2 cursor-pointer" onclick="window.open('https://github.com/EdgarMS760', '_blank');" />
+        <img src={Linkedin.src} alt="LinkedIn Icon" class="inline-block w-12 h-12 mr-2 cursor-pointer" onclick="window.open('https://www.linkedin.com/in/edgar-francisco-martinez-sandoval-0a8449207', '_blank');" />
+    </div>
+  </div>
+
+ 
 </section>
+
+<script type="module" src="/js/hero-animation.js"></script>
