--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,18 +1,34 @@
 ---
-// src/layouts/BaseLayout.astro
-const { lang = 'es', isDark = false } = Astro.props;
+import TopControls from '../components/TopControls.astro';
+const { lang = 'en' } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang={lang} class={isDark ? 'dark' : ''}>
+<html lang={lang} class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Portafolio</title>
   </head>
   <body class="bg-white text-black dark:bg-gray-900 dark:text-white transition-colors duration-300 font-sans">
+    <TopControls currentLang={lang} />
+
+
     <main class="min-h-screen">
       <slot />
     </main>
+
+    <script is:inline>
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'dark') {
+        document.documentElement.classList.add('dark');
+      } else if (savedTheme === 'light') {
+        document.documentElement.classList.remove('dark');
+      } else {
+        if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+          document.documentElement.classList.add('dark');
+        }
+      }
+    </script>
   </body>
 </html>
