--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,15 +1,16 @@
 ---
-import perfil from '../assets/avatar/avatar.webp';
+import perfil from "../assets/avatar/avatar.webp";
 const { t } = Astro.props;
-import GitHub from '../assets/iconos/GitHub.svg';
-import Linkedin from '../assets/iconos/Linkedin.svg';
+import GitHub from "../assets/iconos/GitHub.svg";
+import Linkedin from "../assets/iconos/Linkedin.svg";
+import cv from "../assets/iconos/cv.svg";
 ---
 
 <section
   id="hero"
   class="flex flex-col md:flex-row items-center justify-center py-16 px-6 lg:px-20 max-w-screen-xl mx-auto opacity-0 gap-10 lg:gap-20"
 >
-   <div id="hero-image" class="">
+  <div id="hero-image" class="">
     <img
       src={perfil.src}
       alt="Foto de perfil"
@@ -17,15 +18,34 @@ import Linkedin from '../assets/iconos/Linkedin.svg';
     />
   </div>
   <div id="hero-text" class="flex-1 text-center md:text-left">
-    <h1 class="text-4xl lg:text-6xl font-extrabold mb-6 leading-tight">{t.hero.title}</h1>
-    <p class="text-lg lg:text-xl mb-4 text-gray-600 dark:text-gray-300">{t.hero.description}</p>
-    <div class="flex justify-center filter dark:invert">
-        <img src={GitHub.src} alt="GitHub Icon" class="inline-block w-12 h-12 mr-2 cursor-pointer" onclick="window.open('https://github.com/EdgarMS760', '_blank');" />
-        <img src={Linkedin.src} alt="LinkedIn Icon" class="inline-block w-12 h-12 mr-2 cursor-pointer" onclick="window.open('https://www.linkedin.com/in/edgar-francisco-martinez-sandoval-0a8449207', '_blank');" />
+    <h1 class="text-4xl lg:text-6xl font-extrabold mb-6 leading-tight">
+      {t.home.title}
+    </h1>
+    <p class="text-lg lg:text-xl mb-4 text-gray-600 dark:text-gray-300">
+      {t.home.description}
+    </p>
+    <div class="flex filter dark:invert">
+      <img
+        src={GitHub.src}
+        alt="GitHub Icon"
+        class="inline-block w-12 h-12 mr-4 cursor-pointer hover:transform hover:scale-110 transition-transform duration-300"
+        onclick="window.open('https://github.com/EdgarMS760', '_blank');"
+      />
+      <img
+        src={Linkedin.src}
+        alt="LinkedIn Icon"
+        class="inline-block w-12 h-12 mr-4 cursor-pointer hover:transform hover:scale-110 transition-transform duration-300"
+        onclick="window.open('https://www.linkedin.com/in/edgar-francisco-martinez-sandoval-0a8449207', '_blank');"
+      />
+      <a href={t.cv} target="_blank" rel="noopener noreferrer">
+        <img
+          src={cv.src}
+          alt="CV Icon"
+          class="inline-block w-12 h-12 mr-4 cursor-pointer hover:transform hover:scale-110 transition-transform duration-300"
+        />
+      </a>
     </div>
   </div>
-
- 
 </section>
 
 <script type="module" src="/js/hero-animation.js"></script>
