--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -5,6 +5,7 @@ import en from '../../i18n/en';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Hero from '../../components/Hero.astro';
 import type { Language } from '../../types/language.type';
+import Projects from "../../components/Projects.astro";
 
 export function getStaticPaths() {
   return [
@@ -21,4 +22,6 @@ const t = translation[lang];
 ---
 <BaseLayout lang={lang} t={t} isDark={true}>
   <Hero t={t} />
+<Projects t={t} lang={lang} />
+
 </BaseLayout>
