--- a/src/layouts/ProjectsLayout.astro
+++ b/src/layouts/ProjectsLayout.astro
@@ -13,7 +13,7 @@ const languages = [
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>innstacar</title>
+    <title>{lang === "es" ? "Portafolio" : "Portfolio"}</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js"></script>
 
