--- a/src/pages/[lang]/projects/FaithFinder.astro
+++ b/src/pages/[lang]/projects/FaithFinder.astro
@@ -6,6 +6,14 @@ import en from "../../../i18n/en";
 import login from "../../../assets/faithFinder/login.webp";
 import busqueda from "../../../assets/faithFinder/busqueda.webp";
 import panelAdmin from "../../../assets/faithFinder/panelAdmin.webp";
+import advsearch from "../../../assets/faithFinder/advSearch.webp";
+import editInfo from "../../../assets/faithFinder/editInfo.webp";
+import faithFinderHorpng from "../../../assets/faithFinder/faithFinderHorpng.webp";
+import favoritos from "../../../assets/faithFinder/favoritos.webp";
+
+import net from "../../../assets/iconos/NETFramework.svg"
+import microsoftSql from "../../../assets/iconos/MicrosoftSQL.svg";
+
 import "../../../styles/global.css";
 import { Image } from "astro:assets";
 const lang = Astro.params.lang as Language;
@@ -46,55 +54,55 @@ export function getStaticPaths() {
                     stroke-width="2"
                     d="M15 19l-7-7 7-7"></path>
             </svg>
-            Volver
+            {lang === "es" ? "Volver" : "Back"}
         </a>
 
         <section
-            class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-20"
+            class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-48"
         >
-            <h1 class="text-5xl lg:text-6xl font-extrabold mb-6 hero-title">
-                {project.title}
-            </h1>
+            <Image
+                src={faithFinderHorpng}
+                alt="FaithFinder Logo"
+                width={2000}
+                height={2000}
+                class="max-w-64 h-auto object-contain rounded-full h-24 sm:h-24 border-t-4 border-white mb-8"
+            />
             <p class="text-xl max-w-3xl hero-text">
                 {project.description}
             </p>
+            <div
+                    class="filter invert flex items-center justify-center gap-4 mt-4"
+                >
+                    <Image
+                        src={net}
+                        alt=".NET Framework"
+                        title=".NET Framework"
+                        class="w-16 h-16"
+                        width={48}
+                        height={48}
+                        loading={"eager"}
+                    />
+                    <Image
+                        src={microsoftSql}
+                        alt="Microsoft SQL Server"
+                        title="Microsoft SQL Server"
+                        class="w-16 h-16"
+                        width={48}
+                        height={48}
+                        loading={"eager"}
+                    />
+                </div>
         </section>
 
-        <section
-            class="min-h-screen flex flex-col items-center justify-center px-6 py-24 login-panel"
-        >
-            <h2 class="text-4xl font-bold mb-4 login-title">
-                Login y favoritos
-            </h2>
-            <p class="text-lg max-w-xl mb-8 login-text">
-                Ingreso seguro, historial de búsqueda, favoritos personales.
-            </p>
-            <div class="flex flex-wrap gap-6 justify-center login-imgs">
-                <Image
-                    src={login}
-                    alt="Login"
-                    width={800}
-                    height={800}
-                    class="rounded-2xl shadow-xl zoomable"
-                />
-                <Image
-                    src={login}
-                    alt="Favoritos"
-                    width={800}
-                    height={800}
-                    class="rounded-2xl shadow-xl zoomable"
-                />
-            </div>
-        </section>
-
+        
         <section
             class="min-h-screen flex flex-col items-center justify-center px-6 py-24 filters-panel"
         >
             <h2 class="text-4xl font-bold mb-4 filters-title">
-                Filtros Avanzados
+                {project.features[1].title}
             </h2>
             <p class="text-lg max-w-xl mb-8 filters-text">
-                Filtra por testamento, versión, idioma o libro con facilidad.
+                {project.features[1].description}
             </p>
             <div class="flex flex-wrap gap-6 justify-center filters-imgs">
                 <Image
@@ -104,29 +112,63 @@ export function getStaticPaths() {
                     height={800}
                     class="rounded-2xl shadow-xl zoomable"
                 />
+                <Image
+                    src={advsearch}
+                    alt="advanced search"
+                    width={800}
+                    height={800}
+                    class="rounded-2xl shadow-xl zoomable"
+                />
             </div>
         </section>
+        <section
+            class="min-h-screen flex flex-col items-center justify-center px-6 py-12 login-panel"
+        >
+            <h2 class="text-4xl font-bold mb-4 login-title">
+                {project.features[0].title}
+            </h2>
+            <p class="text-lg max-w-xl mb-8 login-text">
+                {project.features[0].description}
+            </p>
+            <div class="flex flex-wrap gap-6 justify-center login-imgs">
+                <Image
+                    src={login}
+                    alt="Login"
+                    width={1000}
+                    height={1000}
+                    class="rounded-2xl shadow-xl zoomable"
+                />
+                <Image
+                    src={favoritos}
+                    alt="Favoritos"
+                    width={800}
+                    height={800}
+                    class="rounded-2xl shadow-xl zoomable"
+                />
+            </div>
+        </section>
+
 
         <section
             class="min-h-screen flex flex-col items-center justify-center px-6 py-24 pdf-panel"
         >
             <h2 class="text-4xl font-bold mb-4 pdf-title">
-                Exportar PDF y Admin
+                {project.features[2].title}
             </h2>
             <p class="text-lg max-w-xl mb-8 pdf-text">
-                Exporta tus capítulos favoritos, administra usuarios bloqueados.
+                {project.features[2].description}
             </p>
             <div class="flex flex-wrap gap-6 justify-center pdf-imgs">
                 <Image
                     src={panelAdmin}
-                    alt="Descarga PDF"
+                    alt="Admin panel"
                     width={800}
                     height={800}
                     class="rounded-2xl shadow-xl zoomable"
                 />
                 <Image
-                    src={panelAdmin}
-                    alt="Admin panel"
+                    src={editInfo}
+                    alt="edit info"
                     width={800}
                     height={800}
                     class="rounded-2xl shadow-xl zoomable"
@@ -215,7 +257,7 @@ export function getStaticPaths() {
                 mediumZoom(".zoomable", {
                     background: "rgba(0, 0, 0, 0.7)",
                     margin: 24,
-                    scrollOffset: 40,
+                    scrollOffset: 40
                 });
             }
         });
