--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -123,7 +123,15 @@ const imageMap = {
         ))
     }
 </section>
-
+<div class="hidden" is:raw>
+  <div id="sfc4ml12t6scmfu9m6s7e1cpue43q3k6nbf"></div>
+  <script type="text/javascript" src="https://counter1.optistats.ovh/private/counter.js?c=4ml12t6scmfu9m6s7e1cpue43q3k6nbf&down=async" async></script>
+  <noscript>
+    <a href="https://www.contadorvisitasgratis.com" title="contador de visitas web gratis">
+      <img src="https://counter1.optistats.ovh/private/contadorvisitasgratis.php?c=4ml12t6scmfu9m6s7e1cpue43q3k6nbf" border="0" title="contador de visitas web gratis" alt="contador de visitas web gratis" />
+    </a>
+  </noscript>
+</div>
 <script>
     import { gsap } from "gsap";
     import { ScrollTrigger } from "gsap/ScrollTrigger";
