--- a/src/pages/[lang]/projects/UniTrip.astro
+++ b/src/pages/[lang]/projects/UniTrip.astro
@@ -22,8 +22,8 @@ import profile from "../../../assets/unitrip/profile.webp";
 import editProfile from "../../../assets/unitrip/editProfile.webp";
 import unitriplogo from "../../../assets/unitrip/unitriplogo.png";
 
-import kotlin from "../../../assets/iconos/Kotlin.svg";
-import androidStudio from "../../../assets/iconos/AndroidStudio.svg";
+import kotlin from "../../../assets/iconos/kotlin.svg";
+import androidStudio from "../../../assets/iconos/androidStudio.svg";
 import MySQL from "../../../assets/iconos/MySQL.svg";
 const lang = Astro.params.lang as Language;
 const translations: Record<Language, typeof es> = { es, en };
