--- a/src/pages/[lang]/projects/Studify.astro
+++ b/src/pages/[lang]/projects/Studify.astro
@@ -7,11 +7,11 @@ import ProjectsLayout from "../../../layouts/ProjectsLayout.astro";
 import { Image } from "astro:assets";
 import react from "../../../assets/iconos/React.svg";
 import tailwind from "../../../assets/iconos/Tailwind.svg";
-import mongodb from "../../../assets/iconos/MongoDB.svg";
-import nodejs from "../../../assets/iconos/NodeJS.svg";
-import openai from "../../../assets/iconos/OpenAI.svg";
+import mongodb from "../../../assets/iconos/MongoDb.svg";
+import nodejs from "../../../assets/iconos/Nodejs.svg";
+import openai from "../../../assets/iconos/OpenAi.svg";
 import firebase from "../../../assets/iconos/Firebase.svg";
-import logo from "../../../assets/studify/logo.png";
+import logo from "../../../assets/studify/Logo.png";
 import studimate from "../../../assets/studify/alumno/studimate.webp";
 import darkmode from "../../../assets/studify/darkmode.webp";
 import lightmode from "../../../assets/studify/lightmode.webp";
@@ -19,7 +19,7 @@ import loginGoogle from "../../../assets/studify/loginGoogle.webp";
 import registro from "../../../assets/studify/registro.webp";
 import inicioLight from "../../../assets/studify/maestro/inicioLight.webp";
 import calendario from "../../../assets/studify/alumno/calendario.webp";
-import materialesAlumno from "../../../assets/studify/alumno/materialesAlumno.webp";
+import materialesAlumno from "../../../assets/studify/alumno/MaterialesAlumno.webp";
 import muroAlumno from "../../../assets/studify/alumno/muroAlumno.webp";
 import subirTarea from "../../../assets/studify/alumno/subirTarea.webp";
 import tareasAlumno from "../../../assets/studify/alumno/tareasAlumno.webp";
