--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import perfil from "../assets/avatar/avatar.webp";
 const { t } = Astro.props;
 import GitHub from "../assets/iconos/GitHub.svg";
-import Linkedin from "../assets/iconos/Linkedin.svg";
+import Linkedin from "../assets/iconos/LinkedIn.svg";
 import cv from "../assets/iconos/cv.svg";
 ---
 
